# procon2020-comp

./: .gitignore  Cargo.toml  README.md  opt.py  view_opt.py
src/: field.rs  lib.rs  main.rs  manager.rs  simulator.rs  visualizer.rs
src/algorithms/: base.rs  greedy_select.rs  mod.rs  simple_dp.rs  simple_regret.rs  social_distance.rs
src/api/: parse.rs  request.rs
