[package]
name = "procon31-comp"
version = "0.1.0"
authors = ["shibh308 <s17097@tokyo.kosen-ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.6.0"
num-traits = "0.2"
ordered-float = "2.0.0"
piet = "0.1.0"
rand = "0.7.3"
serde_json = "1.0"
try_from = "0.3.2"